Done product Assignment  array stack Implementation

--- a/BasicDemo/BasicDemo.csproj
+++ b/BasicDemo/BasicDemo.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Department.cs" />
     <Compile Include="EmoloyeeStatic.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesManager.cs" />
