--- a/BasicDemo/BasicDemo.csproj
+++ b/BasicDemo/BasicDemo.csproj
@@ -48,6 +48,7 @@
     <Compile Include="EmoloyeeStatic.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductNew.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesManager.cs" />
