--- a/dotNetAssignments/dotNetAssignments.csproj
+++ b/dotNetAssignments/dotNetAssignments.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A7F1C12D-CE19-4F25-98EB-5F1876260AF1}</ProjectGuid>
+    <ProjectGuid>{5921DFF5-99A8-47C4-8792-FD8976E0BBEE}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BasicDemo</RootNamespace>
-    <AssemblyName>BasicDemo</AssemblyName>
+    <RootNamespace>dotNetAssignments</RootNamespace>
+    <AssemblyName>dotNetAssignments</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,18 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calculation.cs" />
-    <Compile Include="Department.cs" />
-    <Compile Include="EmoloyeeStatic.cs" />
-    <Compile Include="Employee.cs" />
-    <Compile Include="MyGeneric.cs" />
+    <Compile Include="Category.cs" />
+    <Compile Include="Food.cs" />
     <Compile Include="Product.cs" />
-    <Compile Include="ProductNew.cs" />
+    <Compile Include="ProductAi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SalesManager.cs" />
-    <Compile Include="Shape.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Studentcl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
