--- a/BasicDemo/BasicDemo.csproj
+++ b/BasicDemo/BasicDemo.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgeException.cs" />
     <Compile Include="Calculation.cs" />
     <Compile Include="Department.cs" />
     <Compile Include="EmoloyeeStatic.cs" />
