--- a/dotNetAssignments/dotNetAssignments.csproj
+++ b/dotNetAssignments/dotNetAssignments.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Category.cs" />
+    <Compile Include="DelegationAssingment.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductAi.cs" />
